// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddExchangeCard should render 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer flex col-span-2"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary-600"
    >
      <div
        class="sc-bdfBwQ fPrsah p-4 mr-4 rounded-lg bg-theme-primary-100 dark:border-theme-secondary-800"
        height="1em"
        width="1em"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Add Exchange
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`BlankExchangeCard should render when blank 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary-100 dark:text-theme-secondary-800"
    >
      <div
        class="mr-4 w-12 h-12 rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
      />
      Exchange Name
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`ExchangeCard should render 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary-600"
    >
      <div
        class="mr-4"
      >
        <div
          class="w-12 h-12"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
      </div>
      <div
        class="truncate"
      >
        Test Exchange
      </div>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    >
      <div
        class="relative"
      >
        <span
          data-testid="dropdown__toggle"
        >
          <div
            class="flex overflow-hidden justify-center w-4"
          >
            <div
              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
              height="1em"
              width="1em"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
